@@ -1,6 +1,7 @@
 Revision history for Devel-OverloadInfo
 
 {{$NEXT}}
+  - Add overload_op_info() function for info about a single op
 
 0.004     2015-08-13 17:35:32+01:00 Europe/London
   - Document that existence of undef 'fallback' varies between perl versions
